style/css/style.css
/* navbar section  */


.container-fluid {
    padding: 0 15%;
}



#navigationBar {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9999;
    width: 100%;
    height: 50px;
    background-color: black;
}

.logo {
    width: 50%;
    float: left;
}



.navBarSection {
    font-size: 20px;
}

.navBarList {
    display: inline-flex;  /* learn differences to fix links */
}

.navBarLinks {
    list-style-type: none;
    float: right;
    padding: 0 15px 0 15px;
    
}
/* icon section  */
/* #icons{
    padding: 7% 15%;
    background-color: black;
} */




/* venue section  */

#venues {
    padding: 7% 15%;
    background-color: black;
    text-align: center;
    color: white;
}

.carouselSize {
    height: 500px;
}

.venueImage{
    width: 50%;
    margin: 20px;
}

.venueLogo {
    height: 200px;
    width: 25%;
}


/* QOW and money question section  */
#qowMoneySection {
    height: 600px;
    padding: 7% 15%;
    background-color: rgba(29.8%, 73.3%, 9%, 0.3);
}

/* news letter section  */
#newsletter {
    padding: 7% 15%;
    background-color: black;
    color: white;
    /* background-color: rgba(255, 121, 0, 0.3); */
    
}

.footer {
    text-align: center;
}

